Updated upload handler
