# internal/api/handlers/upload.go
@@ -8,20 +8,74 @@ import (
 )
 
 type uploadHandler struct {
-	storage  storage.StorageService
-	metadata metadata.MetadataService
+	storage      storage.StorageService
+	metadata     metadata.MetadataService
+	maxFileBytes int64
 }
 
-func NewUploadHandler(storage storage.StorageService, metadata metadata.MetadataService) *uploadHandler {
-	return &uploadHandler{storage: storage, metadata: metadata}
+func NewUploadHandler(storage storage.StorageService, metadata metadata.MetadataService, maxFileBytes int64) *uploadHandler {
+	return &uploadHandler{storage: storage, metadata: metadata, maxFileBytes: maxFileBytes}
 }
 
 // @Summary      Загрузить файл
-// @Description  (Еще не реализован!) Загружает файл артефакта и метаданные.
+// @Description  Загружает в систему файл артефакта и метаданные.
 // @Tags         upload
-// @Success      200  {string}  string  "Файл успешно загружен"
-// @Failure      500  {object}  map[string]string  "Ошибка сервера"
+// @Accept       multipart/form-data
+// @Produce      plain
+// @Param        file       formData  file    true  "Файл артефакта"
+// @Param        component  query     string  true  "Тестируемый компонент"
+// @Param        build      query     string  true  "Номер сборки"
+// @Param        suite      query     string  true  "Набор тестов"
+// @Success      201  {string}  string  "Файл успешно загружен"
+// @Failure      400  {string}  string  "Ошибка в запросе"
+// @Failure      500  {string}  string  "Внутренняя ошибка сервера"
 // @Router       /upload [post]
-func (*uploadHandler) Handle(w http.ResponseWriter, r *http.Request) {
-	return // TODO: реализовать хендлер
+func (h *uploadHandler) Handle(w http.ResponseWriter, r *http.Request) {
+	if r.Method != http.MethodPost {
+		http.Error(w, "Upload: method not allowed", http.StatusMethodNotAllowed)
+		return
+	}
+
+	r.Body = http.MaxBytesReader(w, r.Body, h.maxFileBytes)
+	if err := r.ParseMultipartForm(h.maxFileBytes); err != nil {
+		http.Error(w, "File too large or bad multipart form", http.StatusBadRequest)
+		return
+	}
+	defer r.MultipartForm.RemoveAll()
+
+	file, header, err := r.FormFile("file")
+	if err != nil {
+		http.Error(w, "Missing file", http.StatusBadRequest)
+		return
+	}
+	defer file.Close()
+
+	component := r.FormValue("component")
+	if component == "" {
+		http.Error(w, "Missing component", http.StatusBadRequest)
+		return
+	}
+
+	build := r.FormValue("build")
+	if build == "" {
+		http.Error(w, "Missing build", http.StatusBadRequest)
+		return
+	}
+
+	suite := r.FormValue("suite")
+	if suite == "" {
+		http.Error(w, "Missing test suite", http.StatusBadRequest)
+		return
+	}
+
+	_, err = h.storage.Save(file, header)
+	if err != nil {
+		http.Error(w, "Failed to save file", http.StatusInternalServerError)
+		return
+	}
+
+	// TODO: Add insert to DB in metadata service
+
+	w.WriteHeader(http.StatusCreated)
+	w.Write([]byte("File was successfully uploaded!"))
 }
